--- a/perf_test/perf_config.py.in
+++ b/perf_test/perf_config.py.in
@@ -14,13 +14,22 @@ USE_WHICH_FAISE_SAERCH = 0 # 0: cpu_flat, 1: gpu_flat, 2: gpu_ivf_flat, 3: gpu_i
 '''
 Configuration for client side batch requests
 '''
-TOTAL_BATCH_COUNT = 10
-QUERY_PER_BATCH = 6
+TOTAL_BATCH_COUNT = 1
+QUERY_PER_BATCH = 1
 MAX_RESULT_WAIT_TIME = 240 # seconds
 RETRIEVE_WAIT_INTERVAL = 0.5 # seconds
 LOG_WAIT_TIME = 10 # seconds
 PRINT_FINISH_INTEVAL = 100 # print a checkpoint after 100 batches 
 
+
+
+'''
+Tags for logging
+'''
+# Client log tags
+LOG_TAG_QUERIES_SENDING_START=@LOG_TAG_QUERIES_SENDING_START@
+LOG_TAG_QUERIES_SENDING_END=@LOG_TAG_QUERIES_SENDING_END@
+LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED=@LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED@
 
 
 
