--- a/cfg/n2/derecho.cfg
+++ b/cfg/n2/derecho.cfg
@@ -35,7 +35,7 @@ disable_partitioning_safety = false
 # maximum payload size for P2P requests
 max_p2p_request_payload_size = 1048576
 # maximum payload size for P2P replies
-max_p2p_reply_payload_size = 102400
+max_p2p_reply_payload_size = 1048576
 # window size for P2P requests and replies
 p2p_window_size = 4
 
