fixed GPU resource release at server shutdown ;added a few more logging for performance breakdown

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,8 @@ if (NOT DEFINED CMAKE_INSTALL_LIBDIR)
 endif()
 
 # enable evaluation
-add_definitions(-DENABLE_VORTEX_EVALUATION_LOGGING=${ENABLE_VORTEX_EVALUATION_LOGGING})
+set(ENABLE_VORTEX_EVALUATION_LOGGING TRUE)
+# add_definitions(-DENABLE_VORTEX_EVALUATION_LOGGING=${ENABLE_VORTEX_EVALUATION_LOGGING})
 
 
 include_directories(
@@ -57,6 +58,10 @@ target_compile_definitions(latency_client PRIVATE
 set(UDL_COMMON_LIBS derecho derecho::cascade pthread faiss CUDA::cudart)
 
 # Centroids_search UDL tags
+set(LOG_BATCH_FAISS_SEARCH_START 30030)
+set(LOG_BATCH_FAISS_SEARCH_END 30031)
+set(LOG_BATCH_FAISS_SEARCH_SIZE 30032)
+
 set(LOG_CENTROIDS_EMBEDDINGS_UDL_START 20000)
 set(LOG_CENTROIDS_EMBEDDINGS_LOADING_START 20010)
 set(LOG_CENTROIDS_EMBEDDINGS_LOADING_END 20011)
@@ -68,6 +73,18 @@ set(LOG_CENTROIDS_EMBEDDINGS_UDL_COMBINE_END 20041)
 set(LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START 20050)
 set(LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END 20051)
 set(LOG_CENTROIDS_EMBEDDINGS_UDL_END 20100)
+
+
+# Cluster Search tags
+set(LOG_CLUSTER_SEARCH_UDL_START 30000)
+set(LOG_CLUSTER_SEARCH_UDL_LOADEMB_START 30010)
+set(LOG_CLUSTER_SEARCH_UDL_LOADEMB_END 30011)
+set(LOG_CLUSTER_SEARCH_DESERIALIZE_START 30020)
+set(LOG_CLUSTER_SEARCH_DESERIALIZE_END 30021)
+set(LOG_CLUSTER_SEARCH_ADDED_TOBATCH 30022)
+set(LOG_CLUSTER_SEARCH_CONSTRUCT_KEYS_END 30041)
+set(LOG_CLUSTER_SEARCH_UDL_EMIT_START 30050)
+
 
 add_library(centroids_search_udl SHARED vortex_udls/centroids_search_udl.cpp vortex_udls/rag_utils.cpp)
 target_link_libraries(centroids_search_udl PRIVATE ${UDL_COMMON_LIBS})
@@ -84,22 +101,10 @@ target_compile_definitions(centroids_search_udl PRIVATE
     LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END}
     LOG_CENTROIDS_EMBEDDINGS_UDL_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_END}
     ENABLE_VORTEX_EVALUATION_LOGGING=${ENABLE_VORTEX_EVALUATION_LOGGING}
+    LOG_BATCH_FAISS_SEARCH_SIZE=${LOG_BATCH_FAISS_SEARCH_SIZE}
+    LOG_BATCH_FAISS_SEARCH_START=${LOG_BATCH_FAISS_SEARCH_START}
+    LOG_BATCH_FAISS_SEARCH_END=${LOG_BATCH_FAISS_SEARCH_END}
 )
-
-
-# Cluster Search tags
-set(LOG_CLUSTER_SEARCH_UDL_START 30000)
-set(LOG_CLUSTER_SEARCH_UDL_LOADEMB_START 30010)
-set(LOG_CLUSTER_SEARCH_UDL_LOADEMB_END 30011)
-set(LOG_CLUSTER_SEARCH_DESERIALIZE_START 30020)
-set(LOG_CLUSTER_SEARCH_DESERIALIZE_END 30021)
-set(LOG_CLUSTER_SEARCH_ADDED_TOBATCH 30022)
-set(LOG_CLUSTER_SEARCH_FAISS_SEARCH_START 30030)
-set(LOG_CLUSTER_SEARCH_FAISS_SEARCH_END 30031)
-set(LOG_CLUSTER_SEARCH_CONSTRUCT_KEYS_END 30041)
-set(LOG_CLUSTER_SEARCH_UDL_EMIT_START 30050)
-set(LOG_CLUSTER_SEARCH_UDL_EMIT_END 30051)
-set(LOG_CLUSTER_SEARCH_UDL_END 30100)
 
 
 add_library(clusters_search_udl SHARED vortex_udls/clusters_search_udl.cpp vortex_udls/rag_utils.cpp)
@@ -111,11 +116,12 @@ target_compile_definitions(clusters_search_udl PRIVATE
     LOG_CLUSTER_SEARCH_UDL_LOADEMB_END=${LOG_CLUSTER_SEARCH_UDL_LOADEMB_END}
     LOG_CLUSTER_SEARCH_DESERIALIZE_START=${LOG_CLUSTER_SEARCH_DESERIALIZE_START}
     LOG_CLUSTER_SEARCH_DESERIALIZE_END=${LOG_CLUSTER_SEARCH_DESERIALIZE_END}
-    LOG_CLUSTER_SEARCH_FAISS_SEARCH_END=${LOG_CLUSTER_SEARCH_FAISS_SEARCH_END}
+    LOG_CLUSTER_SEARCH_ADDED_TOBATCH=${LOG_CLUSTER_SEARCH_ADDED_TOBATCH}
+    LOG_BATCH_FAISS_SEARCH_START=${LOG_BATCH_FAISS_SEARCH_START}
+    LOG_BATCH_FAISS_SEARCH_END=${LOG_BATCH_FAISS_SEARCH_END}
+    LOG_BATCH_FAISS_SEARCH_SIZE=${LOG_BATCH_FAISS_SEARCH_SIZE}
     LOG_CLUSTER_SEARCH_CONSTRUCT_KEYS_END=${LOG_CLUSTER_SEARCH_CONSTRUCT_KEYS_END}
     LOG_CLUSTER_SEARCH_UDL_EMIT_START=${LOG_CLUSTER_SEARCH_UDL_EMIT_START}
-    LOG_CLUSTER_SEARCH_UDL_EMIT_END=${LOG_CLUSTER_SEARCH_UDL_EMIT_END}
-    LOG_CLUSTER_SEARCH_UDL_END=${LOG_CLUSTER_SEARCH_UDL_END}
     ENABLE_VORTEX_EVALUATION_LOGGING=${ENABLE_VORTEX_EVALUATION_LOGGING}
 )
 
@@ -151,6 +157,7 @@ target_compile_definitions(aggregate_generate_udl PRIVATE
     LOG_TAG_AGG_UDL_PUT_RESULT_START=${LOG_TAG_AGG_UDL_PUT_RESULT_START}
     LOG_TAG_AGG_UDL_PUT_RESULT_END=${LOG_TAG_AGG_UDL_PUT_RESULT_END}
     ENABLE_VORTEX_EVALUATION_LOGGING=${ENABLE_VORTEX_EVALUATION_LOGGING}
+    LOG_FAISS_SEARCH_BATCH_SIZE=${LOG_FAISS_SEARCH_BATCH_SIZE}
 )
 
 add_custom_command(TARGET aggregate_generate_udl POST_BUILD
